Cleaned backend, added registry page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,8 +9,9 @@ body {
 
 html { height:100vh } 
 body { min-height:100vh }
-html, body, #root, #root>div {
-  height: 100vh
+html, body, #root {
+  height: 100%;
+  width: 100%;
 }
 
 code {
